<resources>
    <string name="app_name">Popular Movies App</string>
    <string name="sort_order">Sort Order</string>
    <string name="poster_of_movie">Poster of movie</string>
    <string name="error_internet">Please check the internet connection</string>
    <string name="movie_poster">Movie poster</string>
    <string name="settings">Settings</string>
    <string name="trailer">Trailer</string>
    <string name="trailers">Trailers:</string>
    <string name="pref_sort_order_popular">popular</string>
    <string name="pref_sort_order_top_rated">top_rated</string>
    <string name="pref_sort_order_favorites">favorites</string>
    <string name="review">Review: </string>
    <string name="author">Author: </string>
    <string name="reviews">Reviews:</string>
    <string name="no_reviews">No reviews available</string>
    <string name="no_trailers">No trailers available</string>
    <string name="share_trailer">Share trailer</string>
    <string name="ratings">Ratings:</string>
    <string name="release">Release :</string>
    <string name="share_content_desc">Share with other people</string>
    <string name="empty_favorite_List">Empty favorite list</string>
    <string name="error_response">Unable to load data, please try again</string>
    <string name="movie_detail_title">Movie\'s Details</string>
</resources>
